--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>Hackschool Learn Session 2: Grids and Javascript</title>
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css">
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="style.css" type="text/css">
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="script.js"></script>
@@ -15,10 +15,26 @@
 </head>
 
 <body>
+<nav class="navbar navbar-default">
+			<div class="container-fluid">
+				<div class="navbar-header">
+					<img src="resources/logo-hack.png" class="logo"/>Hackschool Learn Session 2: Grids and Javascript
+				</div>
+				<ul class="nav navbar-nav">
+				<li> <a>xyz</a></li>
+				<li>
+				yolo
+				</li>
+			</ul>
+			</div>
+
+			</nav>
 	<div class="container">
 		<div class="row header">
 			<h1><img src="resources/logo-hack.png" class="logo"/>Hackschool Learn Session 2: Grids and Javascript</h1>
-			<a href="http://tinyurl.com/hackschool17-session2-code" target="_blank">README walkthrough for this session</a>
+
+			
+		
 		</div>
 		<div class="row photo-row">
 			<div class="col-md-2 col-sm-4">
